Add external merkle_tree library

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(torii_utils)
 add_subdirectory(ip_tools)
 add_subdirectory(generator)
 add_subdirectory(parser)
-add_subdirectory(merkletree)
+# add_subdirectory(merkletree)
